--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT studia</title>
+    <link rel="icon" href="image/play-button.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -91,6 +92,51 @@
                 </div>
             </div>
         </section>
+        <section class="section__jobs">
+            <div class="section__container container">
+                <div class="section__center">
+                    <div class="section__top">
+                        <h3>Наши работы, на которых <br> 
+                        мы специализируемся</h3>
+                        <button>Все услуги</button>
+                    </div>
+                    <div class="section__imges">
+                        <div class="section__img">
+                            <img src="image/Rectangle 2 (3).png" alt="">
+                            <h6>Исследование и упаковка</h6>
+                            <p>Lorem Ipsum - это текст-"рыба", частo <br> используемый в печати и вэб-дизайне. <br> Lorem Ipsum является стандартной <br> "рыбой" для текстов на латинице с <br> начала XVI века.</p>
+                            <a href="">Подробнее</a>
+                        </div>
+                        <div class="section__img">
+                            <img src="image/Rectangle 2 (3).png" alt="">
+                            <h6>Исследование и упаковка</h6>
+                            <p>Lorem Ipsum - это текст-"рыба", частo <br> используемый в печати и вэб-дизайне. <br> Lorem Ipsum является стандартной <br> "рыбой" для текстов на латинице с <br> начала XVI века.</p>
+                            <a href="">Подробнее</a>
+                        </div>
+                        <div class="section__img">
+                            <img src="image/Rectangle 2 (3).png" alt="">
+                            <h6>Исследование и упаковка</h6>
+                            <p>Lorem Ipsum - это текст-"рыба", частo <br> используемый в печати и вэб-дизайне. <br> Lorem Ipsum является стандартной <br> "рыбой" для текстов на латинице с <br> начала XVI века.</p>
+                            <a href="">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="section__border"></div>
+        </section>
+        <section class="project__box">
+            <div class="container">
+                <div class="project__center">
+                    <h3>Наши проекты</h3>
+                    <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem <br> Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+                    <div class="project__images">
+                        <img src="image/Rectangle 2 (4).png" alt="">
+                        <img src="image/Rectangle 2 (4).png" alt="">
+                        <img src="image/Rectangle 2 (4).png" alt="">
+                        <img src="image/Rectangle 2 (4).png" alt="">
+                    </div>
+                    <button>Все проекты</button>
+                </div>
+            </div>
+        </section>
         <section class="third__section">
             <div class="container">
                 <div class="video">
@@ -101,9 +147,63 @@
                     </div>
                 </div>
             </div>
+            <div class="third__border"></div>
         </section>
+        <div class="bottom__section">
+            <div class="container">
+                <h4>Подпишитесь на нашу рассылку</h4>
+                <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+                <div class="bottom__email">
+                    <input type="text" placeholder="Ваш e-mail">
+                    <button>Подписаться</button>
+                </div>
+                <p>Мы не шлем спам, и передаем никому ваши данные.</p>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="footer__center">
+                <div class="footer__information">
+                    <h4>Контактная информация</h4>
+                    <ul>
+                        <li>test@test.ru</li>
+                        <li>+8 777 555 66 99</li>
+                        <li>Москва, Бульвар Ленина 33</li>
+                    </ul>
+                </div>
+                <div class="footer__ssylka">
+                    <h4>Основные ссылки</h4>
+                    <ul>
+                        <li>Главная</li>
+                        <li>Наши проекты</li>
+                        <li>Наши услуги</li>
+                        <li>Контакты</li>
+                    </ul>
+                </div>
+                <div class="footer__ssylka">
+                    <h4>Наши проекты</h4>
+                    <ul>
+                        <li>РосНано</li>
+                        <li>Сколково</li>
+                        <li>Проект "Восток"</li>
+                        <li>ТЭЦ Калининграда</li>
+                    </ul>
+                </div>
+                <div class="footer__ssylka">
+                    <h4>Социальные сети</h4>
+                    <ul>
+                        <li>VK.com</li>
+                        <li>Instagram</li>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__border"></div>
+            <p>(с) 2019. Все права защищены.</p>
+        </div>
+    </footer>
     
 </body>
 </html>
